# ft

./: .gitignore  CMakeLists.txt
src/: App.cpp  App.h  extmath.cpp  extmath.h  frag.hlsl  ft.cpp  ft.h  int24_t.h  main.cpp  vert.hlsl
src/win32/: com.h  enum_bitwise.h  error.h  gdi.h  handle.h  initguid.cpp  move_only.h  strconv.h  win32.h  window.h
